<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidLayout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="some_girl_name">Girl Name</string>
    
    <string name="notify">Notifications</string>
    
    <string name="terms">Terms</string>
    
    <string name="safety">Privacy &amp; Safety</string>
    
    <string name="support">Support</string>
    
    <string name="log_out">Log Out</string>
    
    <string name="avatar_descr">Big Avatar</string>
    

</resources>
