<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/btn_notify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_notify_height"
        android:background="@drawable/btn_settings_selector"
        android:drawableEnd="@drawable/btn_toogle_selector"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/btn_text_margin"
        android:paddingRight="@dimen/btn_text_margin"
        android:text="@string/notify"
        android:textColor="@android:color/black"
        android:textOff="@string/notify"
        android:textOn="@string/notify"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separetor_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_terms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_settings"
        android:background="@drawable/btn_settings_selector"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/btn_text_margin"
        android:text="@string/terms"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separetor_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_safety"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_settings"
        android:background="@drawable/btn_settings_selector"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/btn_text_margin"
        android:text="@string/safety"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separetor_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_settings"
        android:background="@drawable/btn_settings_selector"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/btn_text_margin"
        android:text="@string/support"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/btn_logout_selector"
        android:fontFamily="Roboto Light"
        android:text="@string/log_out"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/txt_name_size" />

</LinearLayout>